<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@drawable/gradient_bg"
    tools:context="com.example.alaaelias.portfolio.MainActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:orientation="vertical"
        android:padding="10dp">

        <TableLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:paddingBottom="50dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="51dp"
                android:gravity="center"
                android:text="@string/buttons_title"
                android:textColor="#2E3D49"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_popular_movies"
                style="@style/CustomButtonStyle"
                android:text="@string/popular_movies" />

            <Button
                android:id="@+id/btn_stock_hawak"
                style="@style/CustomButtonStyle"
                android:text="@string/stock_hawk" />

            <Button
                android:id="@+id/btn_build_it_bigger"
                style="@style/CustomButtonStyle"
                android:text="@string/build_it_bigger" />

            <Button
                android:id="@+id/btn_make_your_app_material"
                style="@style/CustomButtonStyle"
                android:text="@string/make_your_app_material" />

            <Button
                android:id="@+id/btn_go_ubiquitous"
                style="@style/CustomButtonStyle"
                android:text="@string/go_ubiquitous" />

            <Button
                android:id="@+id/btn_capstone"
                style="@style/CustomButtonStyle"
                android:text="@string/capstone" />

        </TableLayout>
    </ScrollView>
</LinearLayout>
